[project]
name = "dp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anyio>=4.5.2",
    "drissionpage>=4.1.0.18",
    "loguru>=0.7.3",
    "playwright>=1.48.0",
    "requests>=2.32.3",
]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"#镜像源加速
